--- a/it_fig.Rmd
+++ b/it_fig.Rmd
@@ -8,6 +8,7 @@ editor_options:
 ```{r setup}
 library(tidyverse)
 library(readxl)
+library(directlabels)
 ```
 
 ## Lese inn data og tranformere fra wide til long format
@@ -18,45 +19,66 @@ x <- read_xlsx(path = "lokalkommuner.xlsx")
 # ser på 5 første linjer
 head(x, n = 5)
 # går fra wide til long
-x_l <- pivot_longer(x, cols = `1951`:`2020`, names_to = "year", values_to = "pop")
-# pop as integer, year as date
-x_l$pop. <- as.integer(x_l$pop)
-x_l$year <- as.Date(x_l$year, format = "%Y")
+x_l <- pivot_longer(x, cols = `1951`:`2020`, names_to = "år", values_to = "befolkning")
+# befolkning as integer, år as date
+x_l$befolkning. <- as.integer(x_l$befolkning)
+x_l$år <- as.Date(x_l$år, format = "%Y")
 # set name first variable
 names(x_l)[1] <- "kommune"
 #  set missing to 0
 x_l[is.na(x_l)] <- 0
-# Lager indikatorvariabel for skalert
-x_l$skalert <- str_detect(x_l$kommune, "_skalert")
 head(x_l, n = 5)
-```
-```{r}
-
-head(x_l)
-filter(x_l, year < "1953-09-22" & year > "1950-09-22" )
 ```
 
 ## Plot av dataene
 
-### Ikke skalert
+### Strand
 
-```{r plot-ikke-skalert}
-ggplot(data = filter(x_l, year < "2020-09-22"), mapping = aes(x = year, y = pop, group = kommune)) +
-  geom_point(mapping = aes(colour = kommune), size = 1.5) +
-  geom_line(colour = "Gray80")
+```{r plot-strand}
+plot_data <- x_l %>% 
+  filter(år > "1960-09-22") %>%
+  filter(år < "2020-09-22") %>%
+  filter(kommune %in% c("Strand"))
+
+ggplot(data = plot_data, mapping = aes(x = år, y = befolkning, group = kommune)) +
+  geom_line(mapping = aes(colour = kommune), size = 0.5) +
+  theme(
+    legend.justification = c(0, 0),
+    legend.position = c(0.05, 0.75)
+    #legend.position = "none"
+  )
 ```
-### Skalert
 
-```{r plot-skalert}
-ggplot(data = filter(x_l, year < "2020-09-22"), mapping = aes(x = year, y = pop, group = kommune)) +
-  geom_point(mapping = aes(colour = kommune), size = 1.5) +
-  geom_line(colour = "Gray80")
+### Flere kommuner
+
+```{r plot-flere}
+plot_data <- x_l %>% 
+  filter(år > "1965-09-22") %>%
+  filter(år < "2020-09-22") %>%
+  filter(kommune %in% c("Strand", "Finnøy", "Rennesøy"))
+
+ggplot(data = plot_data, mapping = aes(x = år, y = befolkning, group = kommune)) +
+  geom_line(mapping = aes(colour = kommune), size = 0.5) +
+  theme(
+    legend.justification = c(0, 0),
+    legend.position = c(0.05, 0.7)
+    #legend.position = "none"
+  )
 ```
 ### Alle
 
+Dropper dem med skalert i navnet.
+
 ```{r plot-begge}
-ggplot(data = filter(x_l, year < "2020-09-22"), mapping = aes(x = year, y = pop, group = kommune)) +
-  geom_line(mapping = aes(colour = kommune), size = 1.25)
+plot_data <- x_l %>% 
+  filter(år > "1950-09-22") %>%
+  filter(år < "2020-09-22") 
+
+plot_data <- plot_data[str_detect(plot_data$kommune, "_skalert", negate = TRUE),]
+
+ggplot(data = plot_data, mapping = aes(x = år, y = befolkning, group = kommune)) +
+  geom_line(mapping = aes(colour = kommune), size = 1.25) +
+  geom_label(mapping = aes(x = år, y = befolkning, label = kommune))
 ```
 ### Utvalg
 
@@ -64,14 +86,14 @@ ggplot(data = filter(x_l, year < "2020-09-22"), mapping = aes(x = year, y = pop,
 
 ```{r subset}
 x_l_s <- x_l %>%
-  filter(year < "2020-09-22") %>%
-  filter(year >= "1951-09-22") %>%
+  filter(år < "2020-09-22") %>%
+  filter(år >= "1951-09-22") %>%
   filter(kommune %in% c("Askøy", "Fjell", "Finnøy", "Tysnes"))
 ```
 
 
 ```{r plot-utvalg}
-g1 <- ggplot(data = filter(x_l_s, year < "2020-09-22" & year > "1951-09-22"), mapping = aes(x = year, y = pop, group = kommune)) +
+g1 <- ggplot(data = filter(x_l_s, år < "2020-09-22" & år > "1951-09-22"), mapping = aes(x = år, y = befolkning, group = kommune)) +
   geom_line(mapping = aes(colour = kommune), size = 0.75)
 g1
 ```
